--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.73.1
+ * style.css v6.73.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -499,6 +499,10 @@ th {
   @media (min-width: 39.118rem) {
     .site-navigation li {
       line-height: 4.013rem; } }
+  @media (min-width: 53.487rem) {
+    .site-navigation {
+      margin-left: -0.809rem;
+      right: auto; } }
 
 .tagline {
   color: #6a625e;
@@ -513,9 +517,7 @@ th {
   @media (min-width: 53.487rem) {
     .tagline {
       font-size: 2.618rem;
-      margin-left: -14.369rem;
-      margin-top: 6.854rem;
-      max-width: 50.369rem; } }
+      margin-top: 6.854rem; } }
 
 .content {
   margin-top: -8.472rem; }
@@ -541,7 +543,6 @@ th {
       margin-top: 11.09rem; }
       [role="main"] > .first-heading {
         font-size: 2.618rem;
-        margin-left: -14.369rem;
         padding-bottom: 5.236rem; } }
 
 .section-footer {
@@ -553,13 +554,8 @@ th {
       width: 12.751rem; }
       .section-footer p {
         margin-top: 0.727rem; }
-      [role="main"] > .section-footer {
-        bottom: auto;
-        top: auto; }
         [role="main"] > .section-footer p {
-          margin-top: 1.699rem; }
-      .has-image[role="main"] > .section-footer {
-        bottom: 100%; } }
+          margin-top: 1.047rem; } }
 
 .global-footer {
   font-size: 0.811rem;
