--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.73.2
+ * style.css v6.74.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -143,11 +143,15 @@ td {
   margin-left: auto;
   margin-right: auto;
   max-width: 36rem;
-  padding-left: 0.809rem;
-  padding-right: 0.809rem; }
-  @media (min-width: 53.487rem) {
+  padding-left: 0.607rem;
+  padding-right: 0.607rem; }
+  @media (min-width: 39.118rem) {
     .global-header, .content, .global-footer, .subcontent {
-      padding-left: 15.178rem; } }
+      padding-left: 0.809rem;
+      padding-right: 0.809rem; } }
+  @media (min-width: 55.487rem) {
+    .global-header, .content, .global-footer, .subcontent {
+      padding-left: 17.178rem; } }
 
 .flat-ul {
   zoom: 1; }
@@ -164,17 +168,22 @@ td {
   text-overflow: ellipsis;
   white-space: nowrap; }
 
-.ads, .flat-ul, .full-width {
-  margin-left: -0.809rem;
-  margin-right: -0.809rem; }
+.flat-ul, .full-width {
+  margin-left: -0.607rem;
+  margin-right: -0.607rem; }
+  @media (min-width: 39.118rem) {
+    .flat-ul, .full-width {
+      margin-left: -0.809rem;
+      margin-right: -0.809rem; } }
 
-@media (min-width: 53.487rem) {
+@media (min-width: 55.487rem) {
   figcaption, .section-footer, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
-    margin-right: 1.618rem;
+    margin-right: 2.618rem;
     position: absolute;
     right: 100%;
+    text-align: right;
     top: 0;
-    width: 12.751rem;
+    width: 13.751rem;
     z-index: 1; } }
 
 .section-footer, .post-list .info {
@@ -305,10 +314,10 @@ blockquote {
   border-left: 0.25rem solid #e1ddd5;
   color: #6a625e;
   margin: 0;
-  padding-left: 1.618rem; }
-  @media (min-width: 53.487rem) {
+  padding-left: 2.618rem; }
+  @media (min-width: 55.487rem) {
     blockquote {
-      margin-left: -1.868rem; } }
+      margin-left: -2.868rem; } }
 
 ul,
 ol {
@@ -319,7 +328,7 @@ ol {
   ol ul,
   ol ol {
     margin-top: 0; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     ul,
     ol {
       padding-left: 0; }
@@ -346,9 +355,9 @@ figcaption {
   blockquote + figcaption {
     border-left: 0.25rem solid #e1ddd5;
     color: #6a625e;
-    padding-left: 1.618rem;
+    padding-left: 2.618rem;
     padding-top: 0.618rem; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     figcaption {
       border-bottom: 0.063rem solid #cac5be;
       bottom: 0;
@@ -357,7 +366,7 @@ figcaption {
       top: auto; }
       blockquote + figcaption {
         border-bottom: 0;
-        margin-left: -1.868rem;
+        margin-left: -2.868rem;
         margin-right: 0;
         padding-bottom: 0;
         position: static;
@@ -463,18 +472,15 @@ th {
 .logo {
   background-color: transparent;
   display: block;
-  height: 3.01rem;
+  height: 3.246rem;
   margin-top: 0;
-  width: 3.01rem; }
+  width: 3.246rem; }
   .logo.to-top {
     cursor: pointer; }
   @media (min-width: 39.118rem) {
     .logo {
-      height: 4.013rem;
-      width: 4.013rem; } }
-  @media (min-width: 53.487rem) {
-    .logo {
-      margin-left: -14.369rem; } }
+      height: 4.328rem;
+      width: 4.328rem; } }
 
 .site-navigation {
   display: table;
@@ -487,7 +493,7 @@ th {
   top: 0; }
   .site-navigation li {
     display: table-cell;
-    line-height: 3.01rem;
+    line-height: 3.246rem;
     padding-left: 0.809rem;
     padding-right: 0.809rem; }
   .site-navigation a {
@@ -498,11 +504,15 @@ th {
     border-bottom: 0.125rem solid #278dd2; }
   @media (min-width: 39.118rem) {
     .site-navigation li {
-      line-height: 4.013rem; } }
-  @media (min-width: 53.487rem) {
+      line-height: 4.328rem; } }
+  @media (min-width: 55.487rem) {
     .site-navigation {
-      margin-left: -0.809rem;
-      right: auto; } }
+      left: 0;
+      right: auto;
+      text-align: right;
+      width: 15.369rem; }
+      .site-navigation li {
+        display: inline; } }
 
 .tagline {
   color: #6a625e;
@@ -514,7 +524,7 @@ th {
     .tagline {
       font-size: 2.124rem;
       margin-top: 4.236rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .tagline {
       font-size: 2.618rem;
       margin-top: 6.854rem; } }
@@ -524,7 +534,7 @@ th {
   @media (min-width: 39.118rem) {
     .content {
       margin-top: -6.854rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .content {
       margin-top: -4.236rem; } }
 
@@ -538,7 +548,7 @@ th {
     [role="main"] > .first-heading {
       font-size: 2.124rem;
       padding-bottom: 2.618rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .first-heading {
       margin-top: 11.09rem; }
       [role="main"] > .first-heading {
@@ -549,9 +559,9 @@ th {
   bottom: 100%;
   position: absolute;
   width: 100%; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .section-footer {
-      width: 12.751rem; }
+      width: 13.751rem; }
       .section-footer p {
         margin-top: 0.727rem; }
         [role="main"] > .section-footer p {
@@ -572,7 +582,7 @@ th {
       margin-left: 0.809rem; }
     .footlinks li:last-child {
       padding-right: 0; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .footlinks {
       margin-top: 11.09rem; } }
 
@@ -584,15 +594,19 @@ th {
     display: block;
     height: 0;
     margin-bottom: 0.618rem;
-    width: 3.01rem; }
+    width: 3.246rem; }
   .byline mark {
     background-color: transparent;
     color: inherit; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .byline {
       bottom: 0;
       left: 0.809rem;
-      position: absolute; } }
+      position: absolute;
+      text-align: right;
+      width: 13.751rem; }
+      .byline::before {
+        margin-left: auto; } }
 
 .site-search {
   max-width: 22.249rem;
@@ -604,7 +618,7 @@ th {
       right: 0.809rem;
       top: 6.576rem;
       z-index: 1; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .site-search {
       top: 10.747rem; } }
 
@@ -651,20 +665,19 @@ th {
   cursor: pointer;
   display: block;
   font-size: 1.618rem;
-  margin-left: auto;
   margin-top: 1rem;
   padding-left: 1.618rem;
   padding-right: 1.618rem;
   text-transform: uppercase; }
 
 .drop img {
-  min-width: 12.751rem; }
-@media (min-width: 53.487rem) {
+  min-width: 13.751rem; }
+@media (min-width: 55.487rem) {
   .drop {
     float: left;
-    margin-left: -14.369rem;
+    margin-left: -16.369rem;
     margin-right: 0.809rem;
-    max-width: 32.369rem; } }
+    max-width: 34.369rem; } }
 
 .flat-ul {
   padding-left: 3.427rem; }
@@ -704,9 +717,9 @@ th {
   width: 100%; }
 .full-width figcaption:last-child {
   margin-left: 0.809rem; }
-@media (min-width: 53.487rem) {
+@media (min-width: 55.487rem) {
   .full-width {
-    margin-left: -15.178rem; }
+    margin-left: -17.178rem; }
     .full-width figcaption:last-child {
       border-bottom: 0;
       border-left: 0.25rem solid #e1ddd5;
@@ -718,31 +731,21 @@ th {
       padding-left: 0.559rem; } }
 
 .post-list {
-  margin-top: 1rem;
   padding-left: 0; }
   .post-list li {
-    border-top: 0.063rem solid #e1ddd5;
     font-size: 1.313rem;
     line-height: 1.294;
     list-style-type: none;
-    padding-bottom: 1rem;
-    padding-top: 1rem; }
-    .post-list li:first-child {
-      border-top-width: 0; }
+    margin-top: 1rem; }
   @media (min-width: 39.118rem) {
     .post-list .info {
       float: right;
       line-height: 2.094;
       margin-left: 0.809rem; } }
-  @media (min-width: 53.487rem) {
-    .post-list li {
-      margin-left: -14.369rem;
-      padding-left: 14.369rem; }
+  @media (min-width: 55.487rem) {
     .post-list .info {
       float: none;
-      left: 0;
-      margin-left: 0;
-      padding-top: 1rem; } }
+      margin-left: 0; } }
 
 .pull-quote {
   color: #6a625e;
@@ -763,11 +766,12 @@ th {
     .pull-quote {
       margin-left: 2.618rem;
       margin-right: 2.618rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .pull-quote {
       float: left;
-      margin-left: -14.369rem;
-      width: 22.249rem; } }
+      margin-left: -16.369rem;
+      margin-right: 1.618rem;
+      width: 24.867rem; } }
 
 .read-older a::before {
   color: #534a47;
@@ -781,7 +785,7 @@ th {
   font-size: 1.618rem;
   line-height: 1.294;
   margin-top: 0; }
-@media (min-width: 53.487rem) {
+@media (min-width: 55.487rem) {
   .read-older a::before {
     margin-top: -0.5rem;
     top: 50%; }
@@ -793,15 +797,15 @@ th {
   color: #534a47;
   font-size: 1.313rem;
   padding-left: 0.809rem; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .seealso {
-      margin-left: -1.868rem;
-      padding-left: 1.618rem; } }
+      margin-left: -2.868rem;
+      padding-left: 2.618rem; } }
 
 .sidenote {
   color: #98928c;
   font-size: 0.811rem; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 55.487rem) {
     .sidenote {
       top: auto; } }
 
@@ -810,15 +814,9 @@ th {
 
 .adsbygoogle {
   height: 250px;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 2.618rem;
   width: 300px; }
-  @media (min-width: 326px) {
-    .adsbygoogle {
-      margin-left: 0.809rem;
-      margin-right: 0.809rem; } }
-  @media (min-width: 362px) {
+  @media (min-width: 368px) {
     .adsbygoogle {
       height: 280px;
       width: 336px; } }
@@ -834,7 +832,7 @@ th {
 .share-buttons li {
   display: table-cell;
   padding-left: 0.809rem; }
-@media (min-width: 53.487rem) {
+@media (min-width: 55.487rem) {
   .share-buttons ul {
     bottom: 0;
     top: auto; }
