Place page title before site title

--- a/src/html/404.mustache
+++ b/src/html/404.mustache
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
 
-    <title>Hail2u.net - Page Not Found</title>
+    <title>404 Not Found - Hail2u.net</title>
 
     <style>
       html {
