--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -52,7 +52,8 @@
         {{/isFirstInYear}}
 
         <li>
-          <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+          <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
+            · <span class="tag"><a href="./{{cat}}/">{{category}}</a></span></div>
           <a href="{{link}}">{{{title}}}</a>
         </li>
 
