Remove Tumblr link

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -38,7 +38,7 @@
           <li><a href="/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
         </ul>
 
-        <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>や<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebookページ</a>、<a href="http://u2liah.tumblr.com/" rel="alternate" type="text/html">Tumblr</a>でも購読することができます。</p>
+        <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>や<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebookページ</a>でも購読することができます。</p>
 
         <h2>ライセンス</h2>
 
