Add rel=prefetch for future use

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -21,7 +21,7 @@
       {{#articles}}
         <section id="latest-article" class="topic">
           {{#first}}
-            <a href="{{link}}">
+            <a href="{{link}}" rel="prefetch">
               <h1 class="first-heading">{{title}}</h1>
 
               <footer class="section-footer">
