--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.74.0
+ * style.css v6.74.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -177,7 +177,7 @@ td {
       margin-right: -0.809rem; } }
 
 @media (min-width: 55.487rem) {
-  figcaption, .section-footer, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
+  figcaption, .tagline::before, .section-footer, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
     margin-right: 2.618rem;
     position: absolute;
     right: 100%;
@@ -225,7 +225,7 @@ h2 + p, h2 + pre, h2 + ul,
 h2 + ol, h2 + dl, h2 + figure, h2 + table {
   margin-top: 0.618rem; }
 
-.site-search, .searchbox, figure, .global-header, .content, .content > article,
+.site-search, .searchbox, figure, .global-header, .tagline, .content, .content > article,
 .content > section,
 .content > [role="main"], .global-footer, .subcontent, .post-list li, .read-older {
   position: relative; }
@@ -288,14 +288,11 @@ hr {
   background-color: transparent;
   border: 0;
   clear: both;
-  height: 6.854rem;
-  margin-left: auto;
-  margin-right: auto;
-  width: 10.281rem; }
+  height: 1.618rem;
+  margin: 4.236rem auto;
+  width: 1.618rem; }
   hr::before {
-    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22768%22%20height%3D%221536%22%20viewBox%3D%220%200%20768%201536%22%3E%3Cpath%20d%3D%22M352%20640v72.58l-62.85-36.29-8%2013.85L352%20731.05l16%209.24V640h-16zm48%200v100.29l16-9.24%2070.85-40.91-8-13.85L416%20712.57V640h-16zm-134.85%2077.86l-8%2013.85L320%20768l-62.85%2036.3%208%2013.8L336%20777.2l16-9.2-16-9.2-70.85-40.94zm237.7%200L416%20768l86.85%2050.1%208-13.8L448%20768l62.85-36.29-8-13.85zM400%20795.7V896h16v-72.6l62.85%2036.3%208-13.8L416%20805l-16-9.3zm-32%200l-16%209.3-17.64%2010.1-53.21%2030.8%208%2013.8L352%20823.4V896h16V795.7z%22%20fill%3D%22%23cac5be%22%2F%3E%3C%2Fsvg%3E");
-    background-repeat: repeat-x;
-    background-size: auto 100%; }
+    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22640%22%20height%3D%22640%22%20viewBox%3D%220%200%20640%20640%22%3E%3Cpath%20d%3D%22M288%2020v72.6l-62.85-36.3-8%2013.8L288%20111l16%209.3V20h-16zm48%200v100.3l16-9.3%2070.85-40.9-8-13.8L352%2092.6V20h-16zM201.15%2097.9l-8%2013.8L256%20148l-62.85%2036.3%208%2013.8L272%20157.2l16-9.2-16-9.2-70.85-40.9zm237.7%200L352%20148l86.85%2050.1%208-13.8L384%20148l62.85-36.3-8-13.8zM304%20175.7l-16%209.3-17.64%2010.1-53.21%2030.8%208%2013.8L288%20203.4V276h16V175.7zm32%200V276h16v-72.6l62.85%2036.3%208-13.8L352%20185l-16-9.3zM96.2%20364v72.6l-62.85-36.3-8%2013.8%2070.85%2041%2016%209.2V364h-16zm48%200v100.3l16-9.3%2070.85-40.9-8-13.8-62.85%2036.3V364h-16zm335.6%200v72.6l-62.85-36.3-8%2013.8%2070.85%2041%2016%209.2V364h-16zm48%200v100.3l16-9.3%2070.85-40.9-8-13.8-62.85%2036.3V364h-16zM9.35%20441.9l-8%2013.8L64.2%20492%201.35%20528.3l8%2013.8%2070.85-40.9%2016-9.2-16-9.2-70.85-40.9zm237.7%200L160.2%20492l86.85%2050.1%208-13.8L192.2%20492l62.85-36.3-8-13.8zm145.9%200l-8%2013.8L447.8%20492l-62.85%2036.3%208%2013.8%2070.85-40.9%2016-9.2-16-9.2-70.85-40.9zm237.7%200L543.8%20492l86.85%2050.1%208-13.8L575.8%20492l62.85-36.3-8-13.8zM112.2%20519.7l-16%209.3-17.64%2010.1-53.21%2030.8%208%2013.8%2062.85-36.3V620h16V519.7zm32%200V620h16v-72.6l62.85%2036.3%208-13.8L160.2%20529l-16-9.3zm351.6%200l-16%209.3-17.64%2010.1-53.21%2030.8%208%2013.8%2062.85-36.3V620h16V519.7zm32%200V620h16v-72.6l62.85%2036.3%208-13.8L543.8%20529l-16-9.3z%22%20fill%3D%22%2398928c%22%2F%3E%3C%2Fsvg%3E"); }
 
 pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
@@ -314,15 +311,15 @@ blockquote {
   border-left: 0.25rem solid #e1ddd5;
   color: #6a625e;
   margin: 0;
-  padding-left: 2.618rem; }
+  padding-left: 1.618rem; }
   @media (min-width: 55.487rem) {
     blockquote {
-      margin-left: -2.868rem; } }
+      margin-left: -1.868rem; } }
 
 ul,
 ol {
   clear: both;
-  padding: 0 0 0 2.618rem; }
+  padding: 0 0 0 1.618rem; }
   ul ul,
   ul ol,
   ol ul,
@@ -336,7 +333,7 @@ ol {
       ul ol,
       ol ul,
       ol ol {
-        padding-left: 2.618rem; } }
+        padding-left: 1.618rem; } }
 
 dl {
   clear: both; }
@@ -348,14 +345,14 @@ dt {
   font-weight: bolder; }
 
 dd {
-  margin-left: 2.618rem; }
+  margin-left: 1.618rem; }
 
 figcaption {
   color: #6a625e; }
   blockquote + figcaption {
     border-left: 0.25rem solid #e1ddd5;
     color: #6a625e;
-    padding-left: 2.618rem;
+    padding-left: 1.618rem;
     padding-top: 0.618rem; }
   @media (min-width: 55.487rem) {
     figcaption {
@@ -366,10 +363,11 @@ figcaption {
       top: auto; }
       blockquote + figcaption {
         border-bottom: 0;
-        margin-left: -2.868rem;
+        margin-left: -1.868rem;
         margin-right: 0;
         padding-bottom: 0;
         position: static;
+        text-align: left;
         width: auto; } }
 
 a {
@@ -433,7 +431,7 @@ video {
   max-width: 100%; }
   figure img, figure
   video {
-    background-color: #f8f5ec;
+    background-color: #fcf9f0;
     vertical-align: bottom; }
 
 table {
@@ -481,6 +479,9 @@ th {
     .logo {
       height: 4.328rem;
       width: 4.328rem; } }
+  @media (min-width: 55.487rem) {
+    .logo {
+      margin-left: -6.946rem; } }
 
 .site-navigation {
   display: table;
@@ -507,12 +508,8 @@ th {
       line-height: 4.328rem; } }
   @media (min-width: 55.487rem) {
     .site-navigation {
-      left: 0;
-      right: auto;
-      text-align: right;
-      width: 15.369rem; }
-      .site-navigation li {
-        display: inline; } }
+      margin-left: -0.809rem;
+      right: auto; } }
 
 .tagline {
   color: #6a625e;
@@ -520,14 +517,25 @@ th {
   font-size: 1.618rem;
   font-weight: 400;
   margin-top: 2.618rem; }
+  .tagline::before {
+    border-top: 0.25rem solid #e1ddd5;
+    content: "";
+    display: block;
+    margin-bottom: 1rem;
+    width: 3.246rem; }
   @media (min-width: 39.118rem) {
     .tagline {
       font-size: 2.124rem;
-      margin-top: 4.236rem; } }
+      margin-top: 4.236rem; }
+      .tagline::before {
+        width: 4.328rem; } }
   @media (min-width: 55.487rem) {
     .tagline {
       font-size: 2.618rem;
-      margin-top: 6.854rem; } }
+      margin-top: 6.854rem; }
+      .tagline::before {
+        margin-bottom: 0;
+        margin-top: 1.569rem; } }
 
 .content {
   margin-top: -8.472rem; }
@@ -598,6 +606,9 @@ th {
   .byline mark {
     background-color: transparent;
     color: inherit; }
+  @media (min-width: 39.118rem) {
+    .byline::before {
+      width: 4.328rem; } }
   @media (min-width: 55.487rem) {
     .byline {
       bottom: 0;
@@ -661,14 +672,13 @@ th {
   background-color: #75bae7;
   border: 0;
   border-radius: 0.125rem;
-  color: #f8f5ec;
+  color: #fdfcf7;
   cursor: pointer;
   display: block;
-  font-size: 1.618rem;
   margin-top: 1rem;
-  padding-left: 1.618rem;
-  padding-right: 1.618rem;
-  text-transform: uppercase; }
+  padding: 0.5rem 0;
+  text-transform: uppercase;
+  width: 8.88rem; }
 
 .drop img {
   min-width: 13.751rem; }
@@ -680,7 +690,7 @@ th {
     max-width: 34.369rem; } }
 
 .flat-ul {
-  padding-left: 3.427rem; }
+  padding-left: 2.427rem; }
   @media (min-width: 39.118rem) {
     .flat-ul {
       padding-left: 0; }
@@ -715,12 +725,12 @@ th {
 .full-width canvas {
   border: 0;
   width: 100%; }
-.full-width figcaption:last-child {
+.full-width figcaption {
   margin-left: 0.809rem; }
 @media (min-width: 55.487rem) {
   .full-width {
     margin-left: -17.178rem; }
-    .full-width figcaption:last-child {
+    .full-width figcaption {
       border-bottom: 0;
       border-left: 0.25rem solid #e1ddd5;
       bottom: auto;
@@ -728,7 +738,8 @@ th {
       margin-left: 0;
       margin-top: 1.618rem;
       padding-bottom: 0;
-      padding-left: 0.559rem; } }
+      padding-left: 0.559rem;
+      text-align: left; } }
 
 .post-list {
   padding-left: 0; }
@@ -764,8 +775,8 @@ th {
       font-weight: bolder; }
   @media (min-width: 39.118rem) {
     .pull-quote {
-      margin-left: 2.618rem;
-      margin-right: 2.618rem; } }
+      margin-left: 1.618rem;
+      margin-right: 1.618rem; } }
   @media (min-width: 55.487rem) {
     .pull-quote {
       float: left;
@@ -799,8 +810,8 @@ th {
   padding-left: 0.809rem; }
   @media (min-width: 55.487rem) {
     .seealso {
-      margin-left: -2.868rem;
-      padding-left: 2.618rem; } }
+      margin-left: -1.868rem;
+      padding-left: 1.618rem; } }
 
 .sidenote {
   color: #98928c;
