--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.74.1
+ * style.css v6.74.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -177,7 +177,7 @@ td {
       margin-right: -0.809rem; } }
 
 @media (min-width: 55.487rem) {
-  figcaption, .tagline::before, .section-footer, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
+  figcaption, .tagline::before, .section-footer, .byline, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
     margin-right: 2.618rem;
     position: absolute;
     right: 100%;
@@ -528,7 +528,8 @@ th {
       font-size: 2.124rem;
       margin-top: 4.236rem; }
       .tagline::before {
-        width: 4.328rem; } }
+        max-width: 4.328rem;
+        width: 100%; } }
   @media (min-width: 55.487rem) {
     .tagline {
       font-size: 2.618rem;
@@ -612,10 +613,8 @@ th {
   @media (min-width: 55.487rem) {
     .byline {
       bottom: 0;
-      left: 0.809rem;
-      position: absolute;
-      text-align: right;
-      width: 13.751rem; }
+      margin-right: -14.56rem;
+      top: auto; }
       .byline::before {
         margin-left: auto; } }
 
