Use `rel=preload` with `rel=prerender` fallback

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -21,7 +21,7 @@
       {{#articles}}
         <section id="latest-article" class="topic">
           {{#first}}
-            <a href="{{link}}" rel="prefetch">
+            <a href="{{link}}" loadpolicy="next" rel="preload prerender">
               <h1 class="first-heading">{{title}}</h1>
 
               <footer class="section-footer">
