--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.74.2
+ * style.css v6.74.3
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -217,11 +217,11 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read
     h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read-older a, .topic a, .share-buttons a {
       color: #278dd2; } }
 
-p, hr, pre, ul,
+p, hr, pre, blockquote, ul,
 ol, dl, figure, table, .contact-form, .searchbox {
   margin: 1.618rem 0 0; }
 
-h2 + p, h2 + pre, h2 + ul,
+h2 + p, h2 + pre, h2 + blockquote, h2 + ul,
 h2 + ol, h2 + dl, h2 + figure, h2 + table {
   margin-top: 0.618rem; }
 
@@ -310,7 +310,6 @@ pre {
 blockquote {
   border-left: 0.25rem solid #e1ddd5;
   color: #6a625e;
-  margin: 0;
   padding-left: 1.618rem; }
   @media (min-width: 55.487rem) {
     blockquote {
@@ -465,7 +464,10 @@ th {
   margin-top: 1rem; }
   @media (min-width: 39.118rem) {
     .global-header {
-      margin-top: 1.618rem; } }
+      margin-top: 2.618rem; } }
+  @media (min-width: 55.487rem) {
+    .global-header {
+      margin-top: 6.854rem; } }
 
 .logo {
   background-color: transparent;
@@ -502,7 +504,8 @@ th {
     display: inline-block; }
   .site-navigation mark {
     background-color: transparent;
-    border-bottom: 0.125rem solid #278dd2; }
+    border-bottom: 0.125rem solid #278dd2;
+    padding-bottom: 0.125rem; }
   @media (min-width: 39.118rem) {
     .site-navigation li {
       line-height: 4.328rem; } }
