--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.74.3
+ * style.css v6.74.4
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -706,14 +706,18 @@ th {
 
 @media (min-width: 39.118rem) {
   .floatage-left {
+    max-width: 38.197%;
     float: left;
-    margin-right: 0.809rem;
-    max-width: 38.197%; }
+    margin-right: 0.809rem; }
+    .floatage-left:first-child {
+      margin-top: 0; }
 
   .floatage-right {
+    max-width: 38.197%;
     float: right;
-    margin-left: 0.809rem;
-    max-width: 38.197%; } }
+    margin-left: 0.809rem; }
+    .floatage-right:first-child {
+      margin-top: 0; } }
 .footnote {
   background-image: linear-gradient(to right, #cac5be 0, #cac5be 50%, transparent 50%, transparent 100%);
   background-position: 0 1.618rem;
