--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.74.4
+ * style.css v6.74.5
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -804,8 +804,8 @@ th {
   margin-top: 0; }
 @media (min-width: 55.487rem) {
   .read-older a::before {
-    margin-top: -0.5rem;
-    top: 50%; }
+    line-height: 2.094;
+    margin-top: 0; }
   .read-older p {
     margin-top: 4.236rem; } }
 
@@ -824,6 +824,7 @@ th {
   font-size: 0.811rem; }
   @media (min-width: 55.487rem) {
     .sidenote {
+      text-align: left;
       top: auto; } }
 
 .topic > a {
