--- a/styles/debug.css
+++ b/styles/debug.css
@@ -29,15 +29,15 @@
   right: 0;
   top: 0;
   z-index: 1; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .show-column::before {
-      background-image: linear-gradient(to right, #0f0 0, #0f0 0.809rem, #f0f 0.809rem, #f0f 36.809rem, #0f0 36.809rem, #0f0 37.618rem);
+      background-image: linear-gradient(to right, #0f0 0, #0f0 0.809rem, #f0f 0.809rem, #f0f 40.809rem, #0f0 40.809rem, #0f0 41.618rem);
       background-position: center;
-      background-size: 37.618rem 1px; } }
-  @media (min-width: 55.487rem) {
+      background-size: 41.618rem 1px; } }
+  @media (min-width: 61.015rem) {
     .show-column::before {
-      background-image: linear-gradient(to right, #0f0 0, #0f0 0.809rem, #f0f 0.809rem, #f0f 14.56rem, #0f0 14.56rem, #0f0 17.178rem, #f0f 17.178rem, #f0f 53.178rem, #0f0 53.178rem, #0f0 53.987rem);
-      background-size: 53.987rem 1px; } }
+      background-image: linear-gradient(to right, #0f0 0, #0f0 0.809rem, #f0f 0.809rem, #f0f 16.088rem, #0f0 16.088rem, #0f0 18.706rem, #f0f 18.706rem, #f0f 58.706rem, #0f0 58.706rem, #0f0 59.515rem);
+      background-size: 59.515rem 1px; } }
 
 .show-outline * {
   outline: 1px solid #f0f; }
@@ -53,12 +53,12 @@ body::after {
   padding: .25rem;
   position: fixed;
   right: .5rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     body::after {
-      content: "Medium: 625.888px"; } }
-  @media (min-width: 55.487rem) {
+      content: "Medium: 689.888px"; } }
+  @media (min-width: 61.015rem) {
     body::after {
-      content: "Large: 887.79px"; } }
+      content: "Large: 976.236px"; } }
   @media print {
     body::after {
       display: none; } }
@@ -95,7 +95,7 @@ body::after {
       display: block;
       height: 100%;
       width: 100%; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .colors {
       margin-left: -0.809rem;
       margin-right: -0.809rem; }
@@ -108,9 +108,9 @@ body::after {
   .colors.variation-shade li:nth-child(1)::before {
     background-color: #3c3330; }
   .colors.variation-shade li:nth-child(2)::before {
-    background-color: #534a47; }
+    background-color: #534b47; }
   .colors.variation-shade li:nth-child(3)::before {
-    background-color: #6a625e; }
+    background-color: #6a635e; }
   .colors.variation-shade li:nth-child(4)::before {
     background-color: #817a75; }
   .colors.variation-shade li:nth-child(5)::before {
@@ -118,9 +118,9 @@ body::after {
   .colors.variation-tint li:nth-child(1)::before {
     background-color: #fcf9f0; }
   .colors.variation-tint li:nth-child(2)::before {
-    background-color: #b3ada7; }
+    background-color: #b3aea7; }
   .colors.variation-tint li:nth-child(3)::before {
-    background-color: #cac5be; }
+    background-color: #cac6be; }
   .colors.variation-tint li:nth-child(4)::before {
     background-color: #e1ddd5; }
   .colors.variation-tint li:nth-child(5)::before {
