--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.74.5
+ * style.css v6.75.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -142,16 +142,16 @@ td {
 .global-header, .content, .global-footer, .subcontent {
   margin-left: auto;
   margin-right: auto;
-  max-width: 36rem;
+  max-width: 40rem;
   padding-left: 0.607rem;
   padding-right: 0.607rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .global-header, .content, .global-footer, .subcontent {
       padding-left: 0.809rem;
       padding-right: 0.809rem; } }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .global-header, .content, .global-footer, .subcontent {
-      padding-left: 17.178rem; } }
+      padding-left: 18.706rem; } }
 
 .flat-ul {
   zoom: 1; }
@@ -171,19 +171,19 @@ td {
 .flat-ul, .full-width {
   margin-left: -0.607rem;
   margin-right: -0.607rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .flat-ul, .full-width {
       margin-left: -0.809rem;
       margin-right: -0.809rem; } }
 
-@media (min-width: 55.487rem) {
+@media (min-width: 61.015rem) {
   figcaption, .tagline::before, .section-footer, .byline, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
     margin-right: 2.618rem;
     position: absolute;
     right: 100%;
     text-align: right;
     top: 0;
-    width: 13.751rem;
+    width: 15.279rem;
     z-index: 1; } }
 
 .section-footer, .post-list .info {
@@ -191,9 +191,9 @@ td {
   font-size: 0.811rem;
   line-height: 1.596; }
   .section-footer .date, .post-list .info .date {
-    color: #6a625e; }
+    color: #6a635e; }
   .section-footer .tag, .post-list .info .tag {
-    color: #6a625e; }
+    color: #6a635e; }
 
 h1, h2 {
   font-weight: 400;
@@ -232,7 +232,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
 
 .site-search .query, .searchbox .query {
   -webkit-appearance: none;
-  background-color: #fdfcf7;
+  background-color: #fefcf8;
   border: 0.063rem solid #e1ddd5;
   border-radius: 0;
   box-sizing: border-box;
@@ -266,21 +266,21 @@ body {
   color: #3c3330;
   font-family: "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif;
   line-height: 1.456; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     body {
       line-height: 1.618; } }
 
 h1 {
   font-size: 1.618rem;
   margin: 11.09rem 0 0; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     h1 {
       font-size: 2.124rem; } }
 
 h2 {
   font-size: 1.313rem;
   margin: 4.236rem 0 0; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     h2 {
       font-size: 1.618rem; } }
 
@@ -300,7 +300,7 @@ pre {
   clear: both;
   font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace;
   line-height: 1.294; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     pre {
       overflow: visible;
       overflow-wrap: break-word;
@@ -309,9 +309,9 @@ pre {
 
 blockquote {
   border-left: 0.25rem solid #e1ddd5;
-  color: #6a625e;
+  color: #6a635e;
   padding-left: 1.618rem; }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     blockquote {
       margin-left: -1.868rem; } }
 
@@ -324,7 +324,7 @@ ol {
   ol ul,
   ol ol {
     margin-top: 0; }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     ul,
     ol {
       padding-left: 0; }
@@ -340,22 +340,22 @@ dl {
     margin-top: 0; }
 
 dt {
-  color: #534a47;
+  color: #534b47;
   font-weight: bolder; }
 
 dd {
   margin-left: 1.618rem; }
 
 figcaption {
-  color: #6a625e; }
+  color: #6a635e; }
   blockquote + figcaption {
     border-left: 0.25rem solid #e1ddd5;
-    color: #6a625e;
+    color: #6a635e;
     padding-left: 1.618rem;
     padding-top: 0.618rem; }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     figcaption {
-      border-bottom: 0.063rem solid #cac5be;
+      border-bottom: 0.063rem solid #cac6be;
       bottom: 0;
       padding-bottom: 0.681rem;
       padding-top: 0;
@@ -380,7 +380,7 @@ a {
       color: inherit; } }
 
 em {
-  color: #534a47;
+  color: #534b47;
   font-style: normal;
   font-weight: bolder; }
 
@@ -447,7 +447,7 @@ table {
 
 th,
 td {
-  border-top: 0.063rem solid #cac5be;
+  border-top: 0.063rem solid #cac6be;
   padding: 0.5rem;
   vertical-align: top;
   white-space: nowrap; }
@@ -458,32 +458,32 @@ td {
 th {
   text-align: left; }
   thead th {
-    border-bottom: 0.125rem solid #cac5be; }
+    border-bottom: 0.125rem solid #cac6be; }
 
 .global-header {
   margin-top: 1rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .global-header {
       margin-top: 2.618rem; } }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .global-header {
       margin-top: 6.854rem; } }
 
 .logo {
   background-color: transparent;
   display: block;
-  height: 3.246rem;
+  height: 3.607rem;
   margin-top: 0;
-  width: 3.246rem; }
+  width: 3.607rem; }
   .logo.to-top {
     cursor: pointer; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .logo {
-      height: 4.328rem;
-      width: 4.328rem; } }
-  @media (min-width: 55.487rem) {
+      height: 4.809rem;
+      width: 4.809rem; } }
+  @media (min-width: 61.015rem) {
     .logo {
-      margin-left: -6.946rem; } }
+      margin-left: -7.427rem; } }
 
 .site-navigation {
   display: table;
@@ -496,7 +496,7 @@ th {
   top: 0; }
   .site-navigation li {
     display: table-cell;
-    line-height: 3.246rem;
+    line-height: 3.607rem;
     padding-left: 0.809rem;
     padding-right: 0.809rem; }
   .site-navigation a {
@@ -506,16 +506,16 @@ th {
     background-color: transparent;
     border-bottom: 0.125rem solid #278dd2;
     padding-bottom: 0.125rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .site-navigation li {
-      line-height: 4.328rem; } }
-  @media (min-width: 55.487rem) {
+      line-height: 4.809rem; } }
+  @media (min-width: 61.015rem) {
     .site-navigation {
       margin-left: -0.809rem;
       right: auto; } }
 
 .tagline {
-  color: #6a625e;
+  color: #6a635e;
   font-family: "Niconne", "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif;
   font-size: 1.618rem;
   font-weight: 400;
@@ -525,15 +525,15 @@ th {
     content: "";
     display: block;
     margin-bottom: 1rem;
-    width: 3.246rem; }
-  @media (min-width: 39.118rem) {
+    width: 3.607rem; }
+  @media (min-width: 43.118rem) {
     .tagline {
       font-size: 2.124rem;
       margin-top: 4.236rem; }
       .tagline::before {
-        max-width: 4.328rem;
+        max-width: 4.809rem;
         width: 100%; } }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .tagline {
       font-size: 2.618rem;
       margin-top: 6.854rem; }
@@ -543,24 +543,24 @@ th {
 
 .content {
   margin-top: -8.472rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .content {
       margin-top: -6.854rem; } }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .content {
       margin-top: -4.236rem; } }
 
 .first-heading {
   margin-top: 12.708rem; }
   [role="main"] > .first-heading {
-    color: #6a625e;
+    color: #6a635e;
     font-size: 1.618rem;
     padding-bottom: 1.0rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     [role="main"] > .first-heading {
       font-size: 2.124rem;
       padding-bottom: 2.618rem; } }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .first-heading {
       margin-top: 11.09rem; }
       [role="main"] > .first-heading {
@@ -571,9 +571,9 @@ th {
   bottom: 100%;
   position: absolute;
   width: 100%; }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .section-footer {
-      width: 13.751rem; }
+      width: 15.279rem; }
       .section-footer p {
         margin-top: 0.727rem; }
         [role="main"] > .section-footer p {
@@ -594,44 +594,44 @@ th {
       margin-left: 0.809rem; }
     .footlinks li:last-child {
       padding-right: 0; }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .footlinks {
       margin-top: 11.09rem; } }
 
 .byline {
-  color: #6a625e; }
+  color: #6a635e; }
   .byline::before {
-    border-top: 0.125rem solid #cac5be;
+    border-top: 0.125rem solid #cac6be;
     content: "";
     display: block;
     height: 0;
     margin-bottom: 0.618rem;
-    width: 3.246rem; }
+    width: 3.607rem; }
   .byline mark {
     background-color: transparent;
     color: inherit; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .byline::before {
-      width: 4.328rem; } }
-  @media (min-width: 55.487rem) {
+      width: 4.809rem; } }
+  @media (min-width: 61.015rem) {
     .byline {
       bottom: 0;
-      margin-right: -14.56rem;
+      margin-right: -16.088rem;
       top: auto; }
       .byline::before {
         margin-left: auto; } }
 
 .site-search {
-  max-width: 22.249rem;
+  max-width: 24.721rem;
   top: 4.236rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .site-search {
-      max-width: 13.751rem;
+      max-width: 15.279rem;
       position: absolute;
       right: 0.809rem;
       top: 6.576rem;
       z-index: 1; } }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .site-search {
       top: 10.747rem; } }
 
@@ -641,7 +641,7 @@ th {
 .contact-form .spamfree {
   display: none; }
 .contact-form .cell {
-  background-color: #fdfcf7;
+  background-color: #fefcf8;
   border: 1px solid #e1ddd5;
   border-bottom-width: 0;
   border-right-width: 0;
@@ -674,26 +674,26 @@ th {
   background-color: #75bae7;
   border: 0;
   border-radius: 0.125rem;
-  color: #fdfcf7;
+  color: #fefcf8;
   cursor: pointer;
   display: block;
   margin-top: 1rem;
   padding: 0.5rem 0;
   text-transform: uppercase;
-  width: 8.88rem; }
+  width: 9.825rem; }
 
 .drop img {
-  min-width: 13.751rem; }
-@media (min-width: 55.487rem) {
+  min-width: 15.279rem; }
+@media (min-width: 61.015rem) {
   .drop {
     float: left;
-    margin-left: -16.369rem;
+    margin-left: -17.897rem;
     margin-right: 0.809rem;
-    max-width: 34.369rem; } }
+    max-width: 37.897rem; } }
 
 .flat-ul {
   padding-left: 2.427rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .flat-ul {
       padding-left: 0; }
       .flat-ul li {
@@ -704,7 +704,7 @@ th {
         padding-right: 0.809rem;
         width: 33.333%; } }
 
-@media (min-width: 39.118rem) {
+@media (min-width: 43.118rem) {
   .floatage-left {
     max-width: 38.197%;
     float: left;
@@ -719,7 +719,7 @@ th {
     .floatage-right:first-child {
       margin-top: 0; } }
 .footnote {
-  background-image: linear-gradient(to right, #cac5be 0, #cac5be 50%, transparent 50%, transparent 100%);
+  background-image: linear-gradient(to right, #cac6be 0, #cac6be 50%, transparent 50%, transparent 100%);
   background-position: 0 1.618rem;
   background-repeat: repeat-x;
   background-size: 0.5rem 0.063rem;
@@ -733,9 +733,9 @@ th {
   width: 100%; }
 .full-width figcaption {
   margin-left: 0.809rem; }
-@media (min-width: 55.487rem) {
+@media (min-width: 61.015rem) {
   .full-width {
-    margin-left: -17.178rem; }
+    margin-left: -18.706rem; }
     .full-width figcaption {
       border-bottom: 0;
       border-left: 0.25rem solid #e1ddd5;
@@ -754,18 +754,18 @@ th {
     line-height: 1.294;
     list-style-type: none;
     margin-top: 1rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .post-list .info {
       float: right;
       line-height: 2.094;
       margin-left: 0.809rem; } }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .post-list .info {
       float: none;
       margin-left: 0; } }
 
 .pull-quote {
-  color: #6a625e;
+  color: #6a635e;
   font-size: 1.618rem;
   line-height: 1.294;
   margin-left: 1.618rem;
@@ -779,19 +779,19 @@ th {
     .pull-quote p::after {
       content: close-quote;
       font-weight: bolder; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 43.118rem) {
     .pull-quote {
       margin-left: 1.618rem;
       margin-right: 1.618rem; } }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .pull-quote {
       float: left;
-      margin-left: -16.369rem;
+      margin-left: -17.897rem;
       margin-right: 1.618rem;
-      width: 24.867rem; } }
+      width: 27.34rem; } }
 
 .read-older a::before {
-  color: #534a47;
+  color: #534b47;
   content: "Read older:";
   display: block;
   font-weight: bolder;
@@ -802,7 +802,7 @@ th {
   font-size: 1.618rem;
   line-height: 1.294;
   margin-top: 0; }
-@media (min-width: 55.487rem) {
+@media (min-width: 61.015rem) {
   .read-older a::before {
     line-height: 2.094;
     margin-top: 0; }
@@ -811,10 +811,10 @@ th {
 
 .seealso {
   border-left: 0.25rem double;
-  color: #534a47;
+  color: #534b47;
   font-size: 1.313rem;
   padding-left: 0.809rem; }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .seealso {
       margin-left: -1.868rem;
       padding-left: 1.618rem; } }
@@ -822,7 +822,7 @@ th {
 .sidenote {
   color: #98928c;
   font-size: 0.811rem; }
-  @media (min-width: 55.487rem) {
+  @media (min-width: 61.015rem) {
     .sidenote {
       text-align: left;
       top: auto; } }
@@ -842,7 +842,7 @@ th {
 .share-buttons ul {
   padding-left: 0; }
   .share-buttons ul::before {
-    color: #534a47;
+    color: #534b47;
     content: "Share:";
     display: table-cell;
     font-weight: bolder;
@@ -850,7 +850,7 @@ th {
 .share-buttons li {
   display: table-cell;
   padding-left: 0.809rem; }
-@media (min-width: 55.487rem) {
+@media (min-width: 61.015rem) {
   .share-buttons ul {
     bottom: 0;
     top: auto; }
@@ -913,7 +913,7 @@ pre {
   blockquote,
   ul,
   ol,
-  dl
+  dl,
   figure,
   table {
     page-break-inside: avoid; }
@@ -921,7 +921,7 @@ pre {
   body {
     margin-left: auto;
     margin-right: auto;
-    max-width: 36rem; }
+    max-width: 40rem; }
 
   hr {
     border-bottom: 0.063rem dashed;
