--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.75.0
+ * style.css v6.75.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -177,7 +177,7 @@ td {
       margin-right: -0.809rem; } }
 
 @media (min-width: 61.015rem) {
-  figcaption, .tagline::before, .section-footer, .byline, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
+  figcaption, .section-footer, .byline, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
     margin-right: 2.618rem;
     position: absolute;
     right: 100%;
@@ -225,7 +225,7 @@ h2 + p, h2 + pre, h2 + blockquote, h2 + ul,
 h2 + ol, h2 + dl, h2 + figure, h2 + table {
   margin-top: 0.618rem; }
 
-.site-search, .searchbox, figure, .global-header, .tagline, .content, .content > article,
+.site-search, .searchbox, figure, .global-header, .content, .content > article,
 .content > section,
 .content > [role="main"], .global-footer, .subcontent, .post-list li, .read-older {
   position: relative; }
@@ -515,31 +515,7 @@ th {
       right: auto; } }
 
 .tagline {
-  color: #6a635e;
-  font-family: "Niconne", "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif;
-  font-size: 1.618rem;
-  font-weight: 400;
-  margin-top: 2.618rem; }
-  .tagline::before {
-    border-top: 0.25rem solid #e1ddd5;
-    content: "";
-    display: block;
-    margin-bottom: 1rem;
-    width: 3.607rem; }
-  @media (min-width: 43.118rem) {
-    .tagline {
-      font-size: 2.124rem;
-      margin-top: 4.236rem; }
-      .tagline::before {
-        max-width: 4.809rem;
-        width: 100%; } }
-  @media (min-width: 61.015rem) {
-    .tagline {
-      font-size: 2.618rem;
-      margin-top: 6.854rem; }
-      .tagline::before {
-        margin-bottom: 0;
-        margin-top: 1.569rem; } }
+  display: none; }
 
 .content {
   margin-top: -8.472rem; }
