--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -89,7 +89,7 @@
       <?$permalink::is_permalink eq="1"></div></?>
       <?$permalink::is_permalink ne="1"></article></?>
 
-      <?$utils::count eq="1">
+      <?$story_counter::count eq="1">
         {{> google-adsense}}
       </?>
 
