--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -31,7 +31,7 @@
       <meta content="$permalink::description" property="og:description">
     </?>
 
-    <meta content="$utils::canonical" property="og:url">
+    <meta content="{{canonical}}" property="og:url">
     <meta content="ja_JP" property="og:locale">
     <meta content="{{site_title}}" property="og:site_name">
     <meta content="https://www.facebook.com/hail2u" prefix="article: http://ogp.me/ns/article#" property="article:author">
