--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -65,9 +65,9 @@
 <!-- blosxom date -->
 
 <!-- blosxom story -->
-      <?$permalink::is_permalink eq="1"><div</?><?$utils::has_eyecatch eq="1"> class="has-image"</?><?$permalink::is_permalink eq="1"> role="main"</?><?$permalink::is_permalink eq="1">></?>
+      <?$permalink::is_permalink eq="1"><div</?><?$permalink::has_eyecatch eq="1"> class="has-image"</?><?$permalink::is_permalink eq="1"> role="main"</?><?$permalink::is_permalink eq="1">></?>
       <?$permalink::is_permalink ne="1"><article></?>
-        <?$utils::has_image ne="1"><meta content="{{scheme}}//{{domain}}{{image}}" itemprop="image"></?>
+        <?$permalink::has_image ne="1"><meta content="{{scheme}}//{{domain}}{{image}}" itemprop="image"></?>
         <link href="$url$path/$fn.$default_flavour" itemprop="url">
 
         <h1 class="first-heading" itemprop="name">$title</h1>
