Use text for Logo

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -3,10 +3,10 @@
   <?$permalink::is_permalink eq="1"><div class="global-header" role="banner"></?>
 {{/weblog_child}}
 {{^weblog_child}}<header class="global-header" role="banner">{{/weblog_child}}
-  {{#home}}<mark class="logo"><img alt="{{site_title}}" src="{{site_logo}}"></mark>{{/home}}
+  {{#home}}<mark class="logo">{{site_title}}</mark>{{/home}}
 
   <nav>
-    {{^home}}<a class="logo" href="/"><img alt="{{site_title}}" src="{{site_logo}}"></a>{{/home}}
+    {{^home}}<a class="logo" href="/">{{site_title}}</a>{{/home}}
 
     <ul class="site-navigation">
       {{#weblog}}
