--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.75.3
+ * style.css v6.76.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -461,7 +461,8 @@ th {
     border-bottom: 0.125rem solid #cac6be; }
 
 .global-header {
-  margin-top: 1rem; }
+  margin-top: 1rem;
+  text-transform: uppercase; }
   @media (min-width: 43.118rem) {
     .global-header {
       margin-top: 2.618rem; } }
@@ -470,20 +471,17 @@ th {
       margin-top: 4.236rem; } }
 
 .logo {
-  background-color: transparent;
+  color: inherit;
   display: block;
-  height: 3.607rem;
-  margin-top: 0;
-  width: 3.607rem; }
-  .logo.to-top {
-    cursor: pointer; }
-  @media (min-width: 43.118rem) {
-    .logo {
-      height: 4.809rem;
-      width: 4.809rem; } }
+  font-size: 0.811rem;
+  height: 1.618rem;
+  line-height: 1.618rem;
+  margin-top: 0; }
   @media (min-width: 61.015rem) {
     .logo {
-      margin-left: -7.427rem; } }
+      margin-left: -17.897rem;
+      text-align: right;
+      width: 15.279rem; } }
 
 .site-navigation {
   display: table;
@@ -491,14 +489,12 @@ th {
   margin-top: 0;
   padding-left: 0;
   position: absolute;
-  right: 0;
-  text-transform: uppercase;
+  right: 0.809rem;
   top: 0; }
   .site-navigation li {
     display: table-cell;
-    line-height: 3.607rem;
-    padding-left: 0.809rem;
-    padding-right: 0.809rem; }
+    line-height: 1.618rem;
+    padding-left: 0.809rem; }
   .site-navigation a {
     color: inherit;
     display: inline-block; }
@@ -508,10 +504,10 @@ th {
     padding-bottom: 0.125rem; }
   @media (min-width: 43.118rem) {
     .site-navigation li {
-      line-height: 4.809rem; } }
+      padding-left: 1.618rem; } }
   @media (min-width: 61.015rem) {
     .site-navigation {
-      margin-left: -0.809rem;
+      margin-left: -1.618rem;
       right: auto; } }
 
 .tagline {
@@ -573,9 +569,6 @@ th {
   .byline mark {
     background-color: transparent;
     color: inherit; }
-  @media (min-width: 43.118rem) {
-    .byline::before {
-      width: 4.809rem; } }
   @media (min-width: 61.015rem) {
     .byline {
       bottom: 0;
