--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.76.0
+ * style.css v6.76.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -471,6 +471,7 @@ th {
       margin-top: 4.236rem; } }
 
 .logo {
+  background-color: transparent;
   color: inherit;
   display: block;
   font-size: 0.811rem;
