--- a/src/html/partial/style.mustache
+++ b/src/html/partial/style.mustache
@@ -1,3 +1,3 @@
 <link href="/styles/style.min.css" rel="stylesheet">
-<link class="js-load-css" href="/styles/eau-douce.css" rel="subresource">
-<link class="js-load-css" href="/styles/mplus-1m-latin.css" rel="subresource">
+<link class="js-load-css" href="/styles/eau-douce.min.css" rel="subresource">
+<link class="js-load-css" href="/styles/mplus-1m-latin.min.css" rel="subresource">
