--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.76.1
+ * style.css v6.76.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -465,16 +465,17 @@ th {
   text-transform: uppercase; }
   @media (min-width: 43.118rem) {
     .global-header {
-      margin-top: 2.618rem; } }
+      margin-top: 1.618rem; } }
   @media (min-width: 61.015rem) {
     .global-header {
-      margin-top: 4.236rem; } }
+      margin-top: 2.618rem; } }
 
 .logo {
   background-color: transparent;
-  color: inherit;
+  color: #534b47;
   display: block;
   font-size: 0.811rem;
+  font-weight: bold;
   height: 1.618rem;
   line-height: 1.618rem;
   margin-top: 0; }
@@ -515,19 +516,16 @@ th {
   display: none; }
 
 .content {
-  margin-top: -8.472rem; }
-  @media (min-width: 43.118rem) {
-    .content {
-      margin-top: -6.854rem; } }
-  @media (min-width: 61.015rem) {
-    .content {
-      margin-top: -4.236rem; } }
+  margin-top: -11.09rem; }
 
 .first-heading {
-  margin-top: 12.708rem; }
+  margin-top: 14.002rem; }
+  @media (min-width: 43.118rem) {
+    .first-heading {
+      margin-top: 15.002rem; } }
   @media (min-width: 61.015rem) {
     .first-heading {
-      margin-top: 11.09rem; } }
+      margin-top: 15.326rem; } }
 
 .section-footer {
   bottom: 100%;
